--- a/proxy/nginx-prod.conf
+++ b/proxy/nginx-prod.conf
@@ -1,3 +1,7 @@
+upstream webpack {
+  server web:3000;
+}
+
 upstream backend {
   server sanicbe:5000;
 }
@@ -11,9 +15,20 @@ server {
   listen 80;
   server_name localhost;
 
-  location /api {            
-    rewrite /api$     /    break;  
-    rewrite /api/(.*) /$1  break;  
+  location / {
+    proxy_set_header   Host            $http_host;
+    proxy_set_header   X-Real-IP       $remote_addr;
+    proxy_set_header   X-NginX-Proxy   true;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_http_version 1.1;
+    proxy_redirect     off;
+    proxy_buffering    off;
+    proxy_pass         http://webpack;
+  }
+
+  location /api {
+    rewrite /api$     /    break;
+    rewrite /api/(.*) /$1  break;
     proxy_redirect     off;
     proxy_set_header   Host                 $host;
     proxy_set_header   X-Real-IP            $remote_addr;
