--- a/sanicbe/requirements.txt
+++ b/sanicbe/requirements.txt
@@ -1,14 +1,17 @@
-sanic==21.9.3
-aioredis==1.3.1
+sanic==21.12.1
+aioredis==2.0.1
+hiredis==2.0.0
 asyncpg==0.25.0
 passlib==1.7.4
-pytest==6.2.5
+pytest==7.0.0
 aiohttp==3.8.1
-sqlalchemy==1.4.27
+sqlalchemy==1.4.31
 contextvars==2.4
-sanic-cors==1.0.1
+sanic-cors==2.0.1
 pyjwt==2.3.0
 apscheduler==3.8.1
 aiofiles==0.8.0
 Cerberus==1.3.4
-arrow==1.2.1
+arrow==1.2.2
+sanic-testing==0.8.2
+pytest-asyncio==0.17.2
