--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -9,7 +9,7 @@ services:
       target: testing
       args:
         APP_ENV: test
-    image: ${PROJECT_ID}/sanicvue-be:${VERSION}
+    image: ${PROJECT_ID}/mieagro-be:${VERSION}
     environment:
       APP_ENV: ${APP_ENV}
       API_PORT: ${API_PORT}
@@ -84,7 +84,7 @@ services:
       target: release
       args:
         APP_ENV: test
-    image: ${PROJECT_ID}/sanicvue-proxy:${VERSION}
+    image: ${PROJECT_ID}/mieagro-proxy:${VERSION}
     depends_on:
       - pgadmin
     ports:
