docs: update comment

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -22,15 +22,10 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_SSLMODE=disable
 
-# ODOO_HOST=http://mieagro-dev.odoo.com
-# ODOO_DB =mieagro-dev
-# ODOO_USER=fairuz_tahir@mie.com.my
-# ODOO_PWD=f6447bb5716597a103067d0747ae5f9acca966f4
-
-ODOO_HOST=http://mieagro.odoo.com
-ODOO_DB=mieagro
-ODOO_USER=mieiotdev@gmail.com
-ODOO_PWD=e8e79c7b128b292b8ff1ef113c0ab0b8621f5fb9
+ODOO_HOST=http://mieagro-dev.odoo.com
+ODOO_DB =mieagro-dev
+ODOO_USER=fairuz_tahir@mie.com.my
+ODOO_PWD=f6447bb5716597a103067d0747ae5f9acca966f4
 
 ### pg admin
 PGADMIN_DEFAULT_EMAIL=mohdfairuztahir@gmail.com
