test: remove test

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -22,10 +22,10 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_SSLMODE=disable
 
-ODOO_HOST=http://mieagro-dev.odoo.com
-ODOO_DB =mieagro-dev
-ODOO_USER=fairuz_tahir@mie.com.my
-ODOO_PWD=f6447bb5716597a103067d0747ae5f9acca966f4
+ODOO_HOST=
+ODOO_DB =
+ODOO_USER=
+ODOO_PWD=
 
 ### pg admin
 PGADMIN_DEFAULT_EMAIL=mohdfairuztahir@gmail.com
