--- a/web/package.json
+++ b/web/package.json
@@ -1,16 +1,17 @@
 {
   "name": "web",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.16"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.9.3",
-    "vite": "^2.6.4"
+    "@vitejs/plugin-vue": "^2.2.0",
+    "vite": "^2.8.0"
   }
 }
