--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/cli-plugin-babel": "5.0.0-beta.7",
-    "@vue/cli-service": "5.0.0-beta.7",
+    "@vue/cli-service": "^5.0.1",
     "@vuetify/vite-plugin": "^1.0.0-alpha.3",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
