--- a/web/.vscode/extensions.json
+++ b/web/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["johnsoncodehk.volar"]
+  "recommendations": [
+    "johnsoncodehk.volar",
+    "MisterJ.vue-volar-extention-pack"
+  ]
 }
