--- a/web/package.json
+++ b/web/package.json
@@ -1,29 +1,43 @@
 {
   "name": "web",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
     "dev": "vite --host 0.0.0.0",
+    "lint": "eslint \"**/*.{vue,ts,js}\"",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "6.5.95",
     "roboto-fontface": "*",
-    "vue": "^3.2.25",
+    "vue": "3.2.31",
+    "vue-router": "4.0.12",
     "vuetify": "^3.0.0-alpha.0",
-    "webfontloader": "^1.0.0"
+    "vuex": "4.0.2",
+    "webfontloader": "1.6.28"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "@vue/cli-plugin-babel": "5.0.0-beta.7",
-    "@vue/cli-service": "^5.0.1",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.3",
-    "sass": "^1.38.0",
-    "sass-loader": "^10.0.0",
-    "vite": "^2.8.0",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+    "@typescript-eslint/parser": "5.12.1",
+    "@vitejs/plugin-vue": "2.2.2",
+    "@vue/cli-plugin-babel": "5.0.1",
+    "@vue/cli-plugin-eslint": "5.0.1",
+    "@vue/cli-plugin-router": "5.0.1",
+    "@vue/cli-plugin-typescript": "5.0.1",
+    "@vue/cli-plugin-vuex": "5.0.1",
+    "@vue/cli-service": "5.0.1",
+    "@vue/eslint-config-typescript": "10.0.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
+    "eslint": "8.9.0",
+    "eslint-plugin-vue": "8.5.0",
+    "sass": "1.49.8",
+    "sass-loader": "12.6.0",
+    "typescript": "~4.5.5",
+    "vite": "2.8.4",
     "vue-cli-plugin-vuetify": "~2.4.5",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
