--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "dev": "vite --host 0.0.0.0",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
+    "format": "prettier .  --write",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -30,8 +31,11 @@
     "@vue/cli-service": "5.0.1",
     "@vue/eslint-config-typescript": "10.0.0",
     "@vuetify/vite-plugin": "^1.0.0-alpha.10",
-    "eslint": "8.9.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "8.5.0",
+    "prettier": "^2.5.1",
     "sass": "1.49.8",
     "sass-loader": "12.6.0",
     "typescript": "~4.5.5",
