--- a/web/package.json
+++ b/web/package.json
@@ -8,40 +8,42 @@
     "dev": "vite --host 0.0.0.0",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
     "format": "prettier .  --write",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
-    "@mdi/font": "6.5.95",
-    "roboto-fontface": "*",
-    "vue": "3.2.31",
-    "vue-router": "4.0.12",
-    "vuetify": "^3.0.0-alpha.0",
-    "vuex": "4.0.2",
-    "webfontloader": "1.6.28"
+    "@mdi/font": "^6.5.95",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.12.1",
-    "@typescript-eslint/parser": "5.12.1",
-    "@vitejs/plugin-vue": "2.2.2",
-    "@vue/cli-plugin-babel": "5.0.1",
-    "@vue/cli-plugin-eslint": "5.0.1",
-    "@vue/cli-plugin-router": "5.0.1",
-    "@vue/cli-plugin-typescript": "5.0.1",
-    "@vue/cli-plugin-vuex": "5.0.1",
-    "@vue/cli-service": "5.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "@vue/eslint-config-typescript": "10.0.0",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
+    "@types/jest": "^27.0.1",
+    "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.0.0-0",
+    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "babel-jest": "^27.0.6",
+    "cypress": "^8.3.0",
+    "jest": "^27.0.5",
+    "ts-jest": "^27.0.4",
+    "typescript": "~4.5.5",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "8.5.0",
+    "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
-    "sass": "1.49.8",
-    "sass-loader": "12.6.0",
-    "typescript": "~4.5.5",
-    "vite": "2.8.4",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "sass": "^1.49.8",
+    "sass-loader": "^12.6.0",
+    "vite": "^2.8.4",
+    "vue-template-compiler": "^2.6.14"
   }
 }
