--- a/web/package.json
+++ b/web/package.json
@@ -3,47 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vite preview",
-    "build": "vite build",
-    "dev": "vite --host 0.0.0.0",
-    "lint": "eslint \"**/*.{vue,ts,js}\"",
-    "format": "prettier .  --write",
-    "preview": "vite preview",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "serve": "vue-cli-service serve --open --port 3000",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "npm run serve",
+    "deploy": "npm run build && cd docs && npm run build && cd .. && sudo gh-pages -d dist",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
   },
   "dependencies": {
-    "@mdi/font": "^6.5.95",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "core-js": "^3.8.3",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "@vue/eslint-config-typescript": "10.0.0",
-    "@types/jest": "^27.0.1",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "babel-jest": "^27.0.6",
-    "cypress": "^8.3.0",
-    "jest": "^27.0.5",
-    "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.8",
-    "sass-loader": "^12.6.0",
-    "vite": "^2.8.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
   }
 }
