--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-material": "^1.0.0-beta-15",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
