--- a/web/package.json
+++ b/web/package.json
@@ -12,18 +12,21 @@
   },
   "dependencies": {
     "vue": "^2.6.14",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.6.3"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vuetify": "^1.1.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "vite": "^2.8.0",
     "vite-plugin-vue2": "^1.9.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.3"
   }
 }
