--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.6.3"
+    "vuetify": "^2.6.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
