--- a/web/.vscode/extensions.json
+++ b/web/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["johnsoncodehk.volar"]
+  "recommendations": ["johnsoncodehk.volar", "MisterJ.vue-volar-extention-pack"]
 }
