--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vite preview",
@@ -14,6 +14,7 @@
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
+    "vue-router": "^4.0.13",
     "vuetify": "^3.0.0-alpha.0",
     "webfontloader": "^1.0.0"
   },
@@ -33,6 +34,7 @@
     "typescript": "^4.6.2",
     "vite": "^2.8.0",
     "vue-cli-plugin-vuetify": "~2.4.6",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
