fix: esbuild-linux-64 could not found

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -12,6 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "sourceMap": true,
+    "isolatedModules": true,
     "baseUrl": ".",
     // "types": ["webpack-env"],
     "paths": {
@@ -20,5 +21,5 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "tests/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
