--- a/web/package.json
+++ b/web/package.json
@@ -40,5 +40,9 @@
     "vue-cli-plugin-vuetify": "~2.4.6",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^2.0.0-alpha.0"
+  },
+  "engines": {
+    "node": "16.x.x",
+    "npm": "8.x.x"
   }
 }
